RESOLVED FIXED235286
[LFC][IFC] ASSERT in InlineContentBreaker::tryBreakingPreviousNonOverflowingRuns (!partialRun->length) when webinspector is open
https://bugs.webkit.org/show_bug.cgi?id=235286
Summary [LFC][IFC] ASSERT in InlineContentBreaker::tryBreakingPreviousNonOverflowingR...
alan
Reported 2022-01-16 22:01:23 PST
Created attachment 449304 [details] Test case ssia
Attachments
Test case (108 bytes, text/html)
2022-01-16 22:01 PST, alan
no flags
Patch (6.40 KB, patch)
2022-01-16 22:56 PST, alan
no flags
Patch (8.96 KB, patch)
2022-01-17 06:52 PST, alan
no flags
alan
Comment 1 2022-01-16 22:56:53 PST
alan
Comment 2 2022-01-17 06:52:44 PST
EWS
Comment 3 2022-01-17 09:22:31 PST
Committed r288095 (246109@main): <https://commits.webkit.org/246109@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449331 [details].
Radar WebKit Bug Importer
Comment 4 2022-01-17 09:23:20 PST
Note You need to log in before you can comment on or make changes to this bug.